syntax = "proto3";

package product.v1;

option go_package = "github.com/product-catalog-service/proto/product/v1;productv1";

import "google/protobuf/timestamp.proto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductReply);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductReply);
  rpc ActivateProduct(ActivateProductRequest) returns (ActivateProductReply);
  rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductReply);
  rpc ApplyDiscount(ApplyDiscountRequest) returns (ApplyDiscountReply);
  rpc RemoveDiscount(RemoveDiscountRequest) returns (RemoveDiscountReply);
  rpc GetProduct(GetProductRequest) returns (GetProductReply);
  rpc ListProducts(ListProductsRequest) returns (ListProductsReply);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  int64 base_price_numerator = 4;
  int64 base_price_denominator = 5;
}

message CreateProductReply {
  string product_id = 1;
}

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
}

message UpdateProductReply {}

message ActivateProductRequest {
  string product_id = 1;
}

message ActivateProductReply {}

message DeactivateProductRequest {
  string product_id = 1;
}

message DeactivateProductReply {}

message ApplyDiscountRequest {
  string product_id = 1;
  double percentage = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}

message ApplyDiscountReply {}

message RemoveDiscountRequest {
  string product_id = 1;
}

message RemoveDiscountReply {}

message GetProductRequest {
  string product_id = 1;
}

message GetProductReply {
  ProductView product = 1;
}

message ListProductsRequest {
  string category = 1;
  int32 page_size = 2;
  int32 page_offset = 3;
}

message ListProductsReply {
  repeated ProductView products = 1;
  int32 total_count = 2;
}

message ProductView {
  string id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  string base_price = 5;
  string effective_price = 6;
  optional double discount_percent = 7;
  string status = 8;
  string created_at = 9;
  string updated_at = 10;
}
